# CUER-Helia-Lights

./: .cproject  .mxproject  .project  CMakeLists.txt  CUER-Helia-Lights Debug.launch  CUER-Helia-Lights.ioc  HELIALights.ioc  Makefile  README.md  STM32-for-VSCode.config.yaml  STM32Make.make
Core/Inc/: main.h  stm32f3xx_it.h
Core/Src/: can.c  gpio.c  main.c  stm32f3xx_it.c  tim.c  usart.c
Debug/: makefile  objects.list  sources.mk  subdir.mk
Debug/Core/Src/: subdir.mk
Debug/Drivers/CMSIS/: subdir.mk
Debug/Drivers/STM32F3xx_HAL_Driver/: subdir.mk
HELIALights/: .mxproject  HELIALights.ioc  Makefile
HELIALights/Core/Src/: can.c  gpio.c  main.c  usart.c
PCB/HELIA Lights 2022 V1.0/: HELIA Lights 2022 V1.0 12-02-2022 07-55-09 PM.WAS  HELIA Lights 2022 V1.0 22-03-2022 03-43-50 PM.WAS  HELIA Lights 2022 V1.0.BomDoc  HELIA Lights 2022 V1.0.OutJob  HELIA Lights 2022 V1.0.PCB  HELIA Lights 2022 V1.0.PcbDoc  HELIA Lights 2022 V1.0.PrjPcb  HELIA Lights 2022 V1.0.PrjPcbStructure  HELIA Lights 2022 V1.0.Rep  HELIALights2022V1.0Sheet1.SchDoc  HELIALights2022V1.0Sheet1.sch  HELIALights2022V1.0Sheet2.SchDoc  HELIALights2022V1.0Sheet2.sch
PCB/HELIA Lights 2022 V1.0/Project Outputs for HELIA Lights 2022 V1.0/: Design Rule Check - HELIA Lights 2022 V1.drc  Design Rule Check - HELIA Lights 2022 V1.html  HELIA Lights 2022 V1.0-macro.APR_LIB  HELIA Lights 2022 V1.0.DRR  HELIA Lights 2022 V1.0.EXTREP  HELIA Lights 2022 V1.0.LDP  HELIA Lights 2022 V1.0.REP  HELIA Lights 2022 V1.0.TXT  HELIA Lights 2022 V1.0.apr  HELIA Lights 2022 V1.0_Keep-out.gbr  (+13 more)
cmake/stm32/: utilities.cmake
(+68 files in other folders)
